backend_ikard/logs/anonym_2053_2024.05.24-12.29.36.log
nohup: ignoring input
 * Serving Flask app 'anonym_backend'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:2053
 * Running on http://10.0.23.29:2053
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-014-020
141.143.213.54 - - [24/May/2024 12:30:00] "POST /anonymise HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/backend/anonym_backend.py', reloading
data:image/png;base64
png
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-014-020
141.143.213.54 - - [24/May/2024 12:31:27] "POST /anonymise HTTP/1.1" 200 -
141.143.213.37 - - [24/May/2024 12:31:42] "OPTIONS /anonymise HTTP/1.1" 200 -
141.143.213.37 - - [24/May/2024 12:31:42] "POST /anonymise HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/backend/anonym_backend.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-014-020
141.143.213.54 - - [24/May/2024 12:32:04] "POST /anonymise HTTP/1.1" 200 -
141.143.213.37 - - [24/May/2024 12:32:26] "OPTIONS /anonymise HTTP/1.1" 200 -
141.143.213.37 - - [24/May/2024 12:32:27] "POST /anonymise HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/backend/anonym_backend.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-014-020
 * Detected change in '/home/ubuntu/backend/anonym_backend.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-014-020
 * Detected change in '/home/ubuntu/backend/anonym_backend.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-014-020
141.143.213.37 - - [24/May/2024 12:33:05] "OPTIONS /anonymise HTTP/1.1" 200 -
141.143.213.37 - - [24/May/2024 12:33:05] "POST /anonymise HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/backend/anonym_backend.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-014-020
141.143.213.37 - - [24/May/2024 12:33:35] "OPTIONS /anonymise HTTP/1.1" 200 -
141.143.213.37 - - [24/May/2024 12:33:35] "POST /anonymise HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/backend/anonym_backend.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-014-020
141.143.213.54 - - [24/May/2024 12:33:59] "POST /anonymise HTTP/1.1" 200 -
141.143.213.37 - - [24/May/2024 12:34:05] "OPTIONS /anonymise HTTP/1.1" 200 -
141.143.213.37 - - [24/May/2024 12:34:05] "POST /anonymise HTTP/1.1" 200 -
 * Detected change in '/home/ubuntu/backend/anonym_backend.py', reloading
 * Restarting with stat
  File "/home/ubuntu/backend/anonym_backend.py", line 59
    writeLog("logs.txt", f"response: {header + "," + res}")
                                                ^
SyntaxError: f-string: expecting '}'
